Bug 482604 - GHNS dialog's default size is too small when invoked from Widget Explorer
Summary: GHNS dialog's default size is too small when invoked from Widget Explorer
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.0.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Nate Graham
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2024-03-06 22:46 UTC by Kalzi
Modified: 2024-03-15 04:45 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.1
Sentry Crash Report:


Attachments
small window (1.54 MB, image/png)
2024-03-06 22:46 UTC, Kalzi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kalzi 2024-03-06 22:46:30 UTC
Created attachment 166519 [details]
small window

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
Whenever I right click on the panel and try to add a widget by downloading a new one from the KDE store, the store window opens too small where the search button shows in another bar under it to search. I have to tab twice to just search, once in the magnifying glass then in the search bar that shows up. If enlarge the window, that doesn't happen because the search bar shows up at a certain window size. 

STEPS TO REPRODUCE
1. Right click on the panel and choose "add widgets"
2. Click on "get new widgets
3. Click on "Download plasma widgets"

OBSERVED RESULT
KDE widgets store window is too small

EXPECTED RESULT
KDE store widget window should open in a size that makes the search bar to show as a complete box, not only the magnifying glass icon 

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
Operating System: EndeavourOS 
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.7.8-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 5700G with Radeon Graphics
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 580 Series
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: A520I AC
System Version: -CF

ADDITIONAL INFORMATION
Comment 1 Kalzi 2024-03-06 22:48:28 UTC
This happens on both wayland and x11
Comment 2 Nate Graham 2024-03-07 19:02:54 UTC
It seems like the default dialog size isn't being used when invoked from the Widget Explorer here the way it is for other invocations of it (e.g. in System Settings KCMs). The code in Widget Explorer looks sane enough though.
Comment 3 Nate Graham 2024-03-07 19:08:29 UTC
Found the bug: constructing a dialog from the C++ method gives it a different size than doing so via QML.
Comment 4 Bug Janitor Service 2024-03-07 19:15:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/299
Comment 5 Nate Graham 2024-03-15 04:41:52 UTC
Git commit 2dae07f0769f6e8054cc0facd2c5d27bafaa9e0f by Nate Graham.
Committed on 15/03/2024 at 04:39.
Pushed by ngraham into branch 'master'.

Unify default sizes

Right now there are three different sizes for:
- The dialog when invoked from QML
- The dialog when invoked from C++
- The page (which doesn't even matter since its size is based on the
  parent view, but still)

Let's synchronize these to prevent oddness.
FIXED-IN: 6.1

M  +2    -0    src/qtquick/qml/Dialog.qml
M  +3    -2    src/qtquick/qml/DialogContent.qml
M  +5    -3    src/widgets/dialog.cpp

https://invent.kde.org/frameworks/knewstuff/-/commit/2dae07f0769f6e8054cc0facd2c5d27bafaa9e0f