Unify default sizes

Right now there are three different sizes for:
- The dialog when invoked from QML
- The dialog when invoked from C++
- The page (which doesn't even matter since its size is based on the
  parent view, but still)

Let's synchronize these to prevent oddness.

BUG: 482604
FIXED-IN: 6.1